Fixed some overlapping issues and other minor CSS flaws

--- a/webapp/src/components/ViewChargingHistory/HistoryButton.css
+++ b/webapp/src/components/ViewChargingHistory/HistoryButton.css
@@ -1,10 +1,20 @@
-.button-style {
-    padding: 10px 20px;
-    font-size: 16px;
-    background-color: #3498db;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
+.parent-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.button-style1 {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #3498db;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
